Fix the image display on mobile, make a better home image.

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -15,3 +15,6 @@
     color: #515151;
  }
  
+ .post figure {
+    margin: 0em;
+}
